Add @Nullable/@NonNull annotations to help catch potential issues before they arrise. Closes #50.